--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -69,6 +69,14 @@ button:hover, .btn:hover {
     background-color: #45a049;
 }
 
+.button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
 /* 테이블 스타일 */
 table {
     width: 100%;
