--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -110,11 +110,29 @@ table th {
     background-color: #f4f4f4;
     font-weight: bold;
     color: #333;
+    width: 150px;
 }
 
 table tbody tr:hover {
     background-color: #f9f9f9;
     cursor: pointer;
+}
+
+table img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    border-radius: 6px;
+    display: block;
+}
+
+.image-cell {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* 상품 등록/수정/삭제 버튼 */
