빈 상태일 때 이동 버튼 추가 및 상품 수정 페이지에 목록 이동 버튼 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -135,6 +135,18 @@ table img {
     align-items: center;
 }
 
+.form-group .image-cell {
+    width: 100%;
+    height: auto;
+}
+
+.form-group img {
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    width: 100%;
+    height: auto;
+}
+
 /* 상품 등록/수정/삭제 버튼 */
 .btn.register-btn {
     display: inline-block;
